ENH: dockerfile: remove environment variables
The interface was rather wonky having users define environment variables
and *then* call into the container. It's easier to pass these as cmdline
arguments like the tool already does.

--- a/verifier/Dockerfile
+++ b/verifier/Dockerfile
@@ -1,5 +1,4 @@
 FROM intoto/base:latest
 LABEL maintainer="Santiago Torres Arias <santiago@nyu.edu>"
 
-WORKDIR workspace
-ENTRYPOINT ["in-toto-verify", "-k", "$IN_TOTO_LAYOUT_KEY", "-l" , "$LAYOUT_FILE"]
+ENTRYPOINT ["in-toto-verify"]
