LB optimisations and fixes
re-ordered base Dockerfile for cache optimisation
pinned base Dockerfile alpine version
renamed /workbench to /workdir in base Dockerfile for consistency with usage elsewhere

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,8 +1,5 @@
-FROM alpine:latest
+FROM alpine:3.8
 LABEL maintainer="Santiago Torres Arias <santiago@nyu.edu>"
-
-ADD base/minimal_sample.py /usr/share/in-toto/samples/minimal.py
-ADD base/complete_sample.py /usr/share/in-toto/samples/complete.py
 
 RUN apk update && apk add python2 python2-dev py2-pip build-base py2-cffi libressl-dev
 
@@ -10,4 +7,8 @@ RUN apk update && apk add python2 python2-dev py2-pip build-base py2-cffi libres
 # until the next release.
 RUN pip install in-toto colorama
 
-WORKDIR /workbench/
+RUN mkdir /workspace
+WORKDIR /workspace
+
+ADD minimal_sample.py /usr/share/in-toto/samples/minimal.py
+ADD complete_sample.py /usr/share/in-toto/samples/complete.py
