LB Dockerfile best-practice changes
made dockerfiles buildable from .
adjusted Makefile to descend into subdirs to build images

--- a/functionary/Dockerfile
+++ b/functionary/Dockerfile
@@ -1,5 +1,5 @@
 FROM intoto/base:latest
 LABEL maintainer="Santiago Torres Arias <santiago@nyu.edu>"
 
-ADD functionary/entrypoint.sh /bin/entrypoint.sh
+ADD entrypoint.sh /bin/entrypoint.sh
 ENTRYPOINT ["/bin/entrypoint.sh"]
