--- a/functionary/Dockerfile
+++ b/functionary/Dockerfile
@@ -1,5 +1,5 @@
 FROM intoto/base:latest
-LABEL maintainer="Santiago Torres Arias <santiago@nyu.edu>"
+LABEL maintainer="Santiago Torres Arias <santiagotorres@purdue.edu>"
 
 ADD entrypoint.sh /bin/entrypoint.sh
 ENTRYPOINT ["/bin/entrypoint.sh"]
